stated playing with shodan

--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,17 +24,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reddit_uagent\n",
+      "reddit_uname\n",
+      "reddit_pass\n",
+      "reddit_api\n",
+      "reddit_api_key\n",
+      "W3W_api\n",
+      "shodan_api_key\n",
+      "ip\n"
+     ]
+    }
+   ],
    "source": [
     "# Got very sick of pasting in all the secret stuff that I can't leave in the notebook so...\n",
+    "# While this isn't the most secure option it is better than typing everything in manually with getpass\n",
+    "# ToDo: encryption! input!\n",
     "\n",
     "with open('workfile.json', 'r') as file:\n",
     "        data = json.load(file)\n",
-    "        \n",
-    "#for key in data.keys():\n",
-    "#        print(key)"
+    "\n",
+    "key_list = []\n",
+    "\n",
+    "for key in data.keys():\n",
+    "    print(key)"
    ]
   },
   {
@@ -458,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -471,10 +490,10 @@
     {
      "data": {
       "text/plain": [
-       "('3AA7B96CE4ED48F38A718A03DD5C0ABEE3CE0667', 0)"
+       "('CBFDAC6008F9CAB4083784CBD1874F76618D2A97', 116847)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -553,28 +572,27 @@
      "output_type": "stream",
      "text": [
       "input email/username to check:········\n",
-      "200\n",
-      "['500px', 'Adobe', 'Disqus', 'Dropbox', 'MyFitnessPal']\n"
+      "status code: 403\n",
+      "403! what did you do?\n"
      ]
     }
    ],
    "source": [
     "# Worth noting that this won't work if the run via a VPN (i.e. from my server)\n",
     "\n",
-    "import requests\n",
-    "import json\n",
-    "\n",
     "pwd = getpass.getpass(\"input email/username to check:\")\n",
     "headers = {\"api-version\":\"2\", \"user-agent\":\"Timbos-api-project\"}    \n",
     "url = \"https://haveibeenpwned.com/api/breachedaccount/\" + pwd + \"?truncateResponse=true\"\n",
     "response = requests.get(url, headers = headers)\n",
-    "print(response.status_code)\n",
+    "print(\"status code:\", response.status_code)\n",
     "if response.status_code == 200:\n",
     "    data = response.json()\n",
     "    sites = []\n",
     "    for i in data:\n",
     "        sites.append(i['Name'])\n",
     "    print(sites)\n",
+    "elif response.status_code== 403:\n",
+    "    print(\"403! what did you do?\")\n",
     "else:\n",
     "    print(\"Lucky you, nothing found!\")"
    ]
@@ -618,9 +636,6 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "import getpass\n",
-    "\n",
     "key = data['W3W_api']\n",
     "lat = getpass.getpass(\"Lat:\")\n",
     "long = getpass.getpass(\"Long:\")\n",
@@ -653,6 +668,61 @@
     "else:\n",
     "    words = response.json()['words']\n",
     "    print(words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Shodan.io  \n",
+    "Here we go..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "api_key = data['shodan_api_key']\n",
+    "#ip = getpass.getpass(\"Input an IP to check:\")\n",
+    "ip = data['ip']\n",
+    "\n",
+    "url = \"https://api.shodan.io/shodan/host/{}?key={}\".format(ip, api_key)\n",
+    "response = requests.get(url)\n",
+    "response.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = response.json()\n",
+    "data"
    ]
   }
  ],
