added config.py idea

--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -53,7 +53,12 @@
     "key_list = []\n",
     "\n",
     "for key in data.keys():\n",
-    "    print(key)"
+    "    print(key)\n",
+    "    \n",
+    "# Just saw an idea at https://github.com/ideoforms/python-twitter-examples\n",
+    "# if i put all the secrets into config.py (or something like that)\n",
+    "# then i just run import config and reddit_bullshit = config.reddit_bullshit\n",
+    "# config.py looks like reddit_bullshit = \"xxxxxxxxxxxxxxx\""
    ]
   },
   {
