added latest pytrick

--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -495,10 +495,10 @@
     {
      "data": {
       "text/plain": [
-       "('CBFDAC6008F9CAB4083784CBD1874F76618D2A97', 116847)"
+       "('7CB9DED83CD7F2704D6435C743ED3124ED56C701', 766)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -577,8 +577,8 @@
      "output_type": "stream",
      "text": [
       "input email/username to check:········\n",
-      "status code: 403\n",
-      "403! what did you do?\n"
+      "status code: 200\n",
+      "['OnlinerSpambot']\n"
      ]
     }
    ],
