--- a/PyTricks.ipynb
+++ b/PyTricks.ipynb
@@ -268,6 +268,32 @@
     "myfunc(*tuple_vec)\n",
     "myfunc(**dict_vec)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2370203919999767\n",
+      "2.0257534319825936\n",
+      "1.7275056350044906\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Why Python is great\n",
+    "# The \"timeit\" module lets you measure the execution\n",
+    "# time of small bits of Python code\n",
+    "\n",
+    "import timeit\n",
+    "print(timeit.timeit('\"-\".join(str(n) for n in range(1000))', number=1000))\n",
+    "print(timeit.timeit('\"-\".join([str(n) for n in range(1000)])', number=10000))\n",
+    "print(timeit.timeit('\"-\".join(map(str, range(1000)))', number=10000))"
+   ]
   }
  ],
  "metadata": {
