added latest pytrick

--- a/PyTricks.ipynb
+++ b/PyTricks.ipynb
@@ -294,6 +294,29 @@
     "print(timeit.timeit('\"-\".join([str(n) for n in range(1000)])', number=10000))\n",
     "print(timeit.timeit('\"-\".join(map(str, range(1000)))', number=10000))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{True: 'maybe'}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Python riddle:\n",
+    "# What will this expression evaluate to?\n",
+    "\n",
+    "{True:'yes', 1:'no', 1.0:'maybe'}"
+   ]
   }
  ],
  "metadata": {
