added latest pytrick

--- a/PyTricks.ipynb
+++ b/PyTricks.ipynb
@@ -317,6 +317,71 @@
     "\n",
     "{True:'yes', 1:'no', 1.0:'maybe'}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function myfunc at 0x10ed60730>\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Functions are first-class citizens in Python\n",
+    "# They can be passed as arguments to other functions,\n",
+    "# returned as values from other functions, and\n",
+    "# assigned to variables and stored in data structures.\n",
+    "\n",
+    "def myfunc(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "funcs = [myfunc]\n",
+    "print(funcs[0])\n",
+    "print(funcs[0](2, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \"is\" vs \"==\"\n",
+    "\n",
+    "a = [1, 2, 3]\n",
+    "b = a\n",
+    "\n",
+    "print(a is b)\n",
+    "print(a == b)\n",
+    "\n",
+    "c = list(a)\n",
+    "\n",
+    "print(a == c)\n",
+    "print(a is c)\n",
+    "\n",
+    "# \"is\" expressions evaluate to True if two\n",
+    "# variables point to the same object.\n",
+    "\n",
+    "# \"==\" evaluates to True if the objects\n",
+    "# reffered to by the variables are equal."
+   ]
   }
  ],
  "metadata": {
