added cloudeflare API

--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,10 @@
       "reddit_api_key\n",
       "W3W_api\n",
       "shodan_api_key\n",
-      "ip\n"
+      "ip\n",
+      "X-Auth-Key\n",
+      "X-Auth-Email\n",
+      "zone_identifier\n"
      ]
     }
    ],
@@ -728,6 +731,358 @@
    "source": [
     "data = response.json()\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cloudflare\n",
+    "iiiiinteresting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "Success =  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "request = \"user\"\n",
+    "headers = {\"X-Auth-Key\": data['X-Auth-Key'], \"X-Auth-Email\": data['X-Auth-Email'], \"Content-Type\": \"application/json\"}\n",
+    "url = \"https://api.cloudflare.com/client/v4/\" + request\n",
+    "response = requests.get(url, headers = headers)\n",
+    "print(response.status_code)\n",
+    "print(\"Success = \", response.json()['success'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'result': {'id': 'ca1c02058e114adedcf7088e226f5a41',\n",
+       "  'email': 'timbo72@gmail.com',\n",
+       "  'username': '1cc381bdcea151ea407b2f5fe1ceadc9',\n",
+       "  'first_name': None,\n",
+       "  'last_name': None,\n",
+       "  'telephone': None,\n",
+       "  'country': None,\n",
+       "  'zipcode': None,\n",
+       "  'two_factor_authentication_enabled': True,\n",
+       "  'two_factor_authentication_locked': False,\n",
+       "  'created_on': '2019-05-16T10:10:48.591597Z',\n",
+       "  'modified_on': '2019-05-16T10:20:07.322890Z',\n",
+       "  'organizations': [],\n",
+       "  'has_pro_zones': False,\n",
+       "  'has_business_zones': False,\n",
+       "  'has_enterprise_zones': False,\n",
+       "  'suspended': False},\n",
+       " 'success': True,\n",
+       " 'errors': [],\n",
+       " 'messages': []}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "success!\n"
+     ]
+    }
+   ],
+   "source": [
+    "zone = data['zone_identifier']\n",
+    "request = \"zones/\" + zone + \"/dns_records?type=CNAME\"\n",
+    "headers = {\"X-Auth-Key\": data['X-Auth-Key'], \"X-Auth-Email\": data['X-Auth-Email'], \"Content-Type\": \"application/json\"}\n",
+    "url = \"https://api.cloudflare.com/client/v4/\" + request\n",
+    "response = requests.get(url, headers = headers)\n",
+    "if response.status_code == 200:\n",
+    "    print(\"success!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mail.squirrel.blue\n",
+      "radarr.squirrel.blue\n",
+      "sonarr.squirrel.blue\n"
+     ]
+    }
+   ],
+   "source": [
+    "foo = response.json()\n",
+    "for f in foo['result']:\n",
+    "    print(f['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "success!\n"
+     ]
+    }
+   ],
+   "source": [
+    "zone = data['zone_identifier']\n",
+    "request = \"zones/\" + zone + \"/analytics/dashboard\"\n",
+    "headers = {\"X-Auth-Key\": data['X-Auth-Key'], \"X-Auth-Email\": data['X-Auth-Email'], \"Content-Type\": \"application/json\"}\n",
+    "url = \"https://api.cloudflare.com/client/v4/\" + request\n",
+    "response = requests.get(url, headers = headers)\n",
+    "if response.status_code == 200:\n",
+    "    print(\"success!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'success': True,\n",
+       " 'query': {'since': '2019-05-22T00:00:00Z',\n",
+       "  'until': '2019-05-29T00:00:00Z',\n",
+       "  'time_delta': 1440},\n",
+       " 'errors': [],\n",
+       " 'messages': [],\n",
+       " 'result': {'timeseries': [{'since': '2019-05-22T00:00:00Z',\n",
+       "    'until': '2019-05-23T00:00:00Z',\n",
+       "    'requests': {'all': 5,\n",
+       "     'cached': 0,\n",
+       "     'uncached': 5,\n",
+       "     'ssl': {'encrypted': 0, 'unencrypted': 5},\n",
+       "     'http_status': {'200': 5},\n",
+       "     'content_type': {'html': 5},\n",
+       "     'country': {'BE': 1, 'RU': 1, 'US': 3},\n",
+       "     'ip_class': {'noRecord': 5},\n",
+       "     'ssl_protocol': {'none': 5}},\n",
+       "    'bandwidth': {'all': 20432,\n",
+       "     'cached': 0,\n",
+       "     'uncached': 20432,\n",
+       "     'ssl': {'encrypted': 0, 'unencrypted': 20432},\n",
+       "     'ssl_protocol': {'none': 5},\n",
+       "     'content_type': {'html': 20432},\n",
+       "     'country': {'BE': 3480, 'RU': 6648, 'US': 10304}},\n",
+       "    'threats': {'all': 0, 'type': {}, 'country': {}},\n",
+       "    'pageviews': {'all': 5, 'search_engine': {}},\n",
+       "    'uniques': {'all': 3}},\n",
+       "   {'since': '2019-05-23T00:00:00Z',\n",
+       "    'until': '2019-05-24T00:00:00Z',\n",
+       "    'requests': {'all': 4,\n",
+       "     'cached': 0,\n",
+       "     'uncached': 4,\n",
+       "     'ssl': {'encrypted': 1, 'unencrypted': 3},\n",
+       "     'http_status': {'200': 4},\n",
+       "     'content_type': {'html': 4},\n",
+       "     'country': {'US': 4},\n",
+       "     'ip_class': {'noRecord': 4},\n",
+       "     'ssl_protocol': {'TLSv1.2': 1, 'none': 3}},\n",
+       "    'bandwidth': {'all': 13885,\n",
+       "     'cached': 0,\n",
+       "     'uncached': 13885,\n",
+       "     'ssl': {'encrypted': 3512, 'unencrypted': 10373},\n",
+       "     'ssl_protocol': {'TLSv1.2': 1, 'none': 3},\n",
+       "     'content_type': {'html': 13885},\n",
+       "     'country': {'US': 13885}},\n",
+       "    'threats': {'all': 0, 'type': {}, 'country': {}},\n",
+       "    'pageviews': {'all': 4, 'search_engine': {}},\n",
+       "    'uniques': {'all': 2}},\n",
+       "   {'since': '2019-05-24T00:00:00Z',\n",
+       "    'until': '2019-05-25T00:00:00Z',\n",
+       "    'requests': {'all': 15,\n",
+       "     'cached': 1,\n",
+       "     'uncached': 14,\n",
+       "     'ssl': {'encrypted': 0, 'unencrypted': 15},\n",
+       "     'http_status': {'200': 14, '403': 1},\n",
+       "     'content_type': {'css': 2, 'html': 11, 'png': 2},\n",
+       "     'country': {'FR': 1, 'IN': 1, 'UA': 1, 'US': 12},\n",
+       "     'ip_class': {'noRecord': 8, 'searchEngine': 1, 'whitelist': 6},\n",
+       "     'ssl_protocol': {'none': 15}},\n",
+       "    'bandwidth': {'all': 73644,\n",
+       "     'cached': 3579,\n",
+       "     'uncached': 70065,\n",
+       "     'ssl': {'encrypted': 0, 'unencrypted': 73644},\n",
+       "     'ssl_protocol': {'none': 15},\n",
+       "     'content_type': {'css': 3408, 'html': 39134, 'png': 31102},\n",
+       "     'country': {'FR': 3482, 'IN': 6648, 'UA': 3579, 'US': 59935}},\n",
+       "    'threats': {'all': 1,\n",
+       "     'type': {'bic.ban.unknown': 1},\n",
+       "     'country': {'UA': 1}},\n",
+       "    'pageviews': {'all': 10, 'search_engine': {}},\n",
+       "    'uniques': {'all': 9}},\n",
+       "   {'since': '2019-05-25T00:00:00Z',\n",
+       "    'until': '2019-05-26T00:00:00Z',\n",
+       "    'requests': {'all': 4,\n",
+       "     'cached': 0,\n",
+       "     'uncached': 4,\n",
+       "     'ssl': {'encrypted': 0, 'unencrypted': 4},\n",
+       "     'http_status': {'200': 4},\n",
+       "     'content_type': {'html': 4},\n",
+       "     'country': {'US': 4},\n",
+       "     'ip_class': {'noRecord': 4},\n",
+       "     'ssl_protocol': {'none': 4}},\n",
+       "    'bandwidth': {'all': 13655,\n",
+       "     'cached': 0,\n",
+       "     'uncached': 13655,\n",
+       "     'ssl': {'encrypted': 0, 'unencrypted': 13655},\n",
+       "     'ssl_protocol': {'none': 4},\n",
+       "     'content_type': {'html': 13655},\n",
+       "     'country': {'US': 13655}},\n",
+       "    'threats': {'all': 0, 'type': {}, 'country': {}},\n",
+       "    'pageviews': {'all': 4, 'search_engine': {}},\n",
+       "    'uniques': {'all': 2}},\n",
+       "   {'since': '2019-05-26T00:00:00Z',\n",
+       "    'until': '2019-05-27T00:00:00Z',\n",
+       "    'requests': {'all': 3,\n",
+       "     'cached': 0,\n",
+       "     'uncached': 3,\n",
+       "     'ssl': {'encrypted': 0, 'unencrypted': 3},\n",
+       "     'http_status': {'200': 3},\n",
+       "     'content_type': {'html': 3},\n",
+       "     'country': {'US': 3},\n",
+       "     'ip_class': {'noRecord': 3},\n",
+       "     'ssl_protocol': {'none': 3}},\n",
+       "    'bandwidth': {'all': 10304,\n",
+       "     'cached': 0,\n",
+       "     'uncached': 10304,\n",
+       "     'ssl': {'encrypted': 0, 'unencrypted': 10304},\n",
+       "     'ssl_protocol': {'none': 3},\n",
+       "     'content_type': {'html': 10304},\n",
+       "     'country': {'US': 10304}},\n",
+       "    'threats': {'all': 0, 'type': {}, 'country': {}},\n",
+       "    'pageviews': {'all': 3, 'search_engine': {}},\n",
+       "    'uniques': {'all': 1}},\n",
+       "   {'since': '2019-05-27T00:00:00Z',\n",
+       "    'until': '2019-05-28T00:00:00Z',\n",
+       "    'requests': {'all': 28,\n",
+       "     'cached': 9,\n",
+       "     'uncached': 19,\n",
+       "     'ssl': {'encrypted': 23, 'unencrypted': 5},\n",
+       "     'http_status': {'200': 20, '499': 4, '522': 4},\n",
+       "     'content_type': {'css': 1, 'empty': 4, 'html': 19, 'other': 3, 'png': 1},\n",
+       "     'country': {'AU': 13, 'RU': 1, 'US': 14},\n",
+       "     'ip_class': {'noRecord': 28},\n",
+       "     'ssl_protocol': {'TLSv1.3': 23, 'none': 5}},\n",
+       "    'bandwidth': {'all': 145210,\n",
+       "     'cached': 68069,\n",
+       "     'uncached': 77141,\n",
+       "     'ssl': {'encrypted': 124803, 'unencrypted': 20407},\n",
+       "     'ssl_protocol': {'TLSv1.3': 23, 'none': 5},\n",
+       "     'content_type': {'css': 5317,\n",
+       "      'html': 77141,\n",
+       "      'other': 45580,\n",
+       "      'png': 17172},\n",
+       "     'country': {'AU': 89389, 'RU': 6643, 'US': 49178}},\n",
+       "    'threats': {'all': 0, 'type': {}, 'country': {}},\n",
+       "    'pageviews': {'all': 15, 'search_engine': {}},\n",
+       "    'uniques': {'all': 9}},\n",
+       "   {'since': '2019-05-28T00:00:00Z',\n",
+       "    'until': '2019-05-29T00:00:00Z',\n",
+       "    'requests': {'all': 60,\n",
+       "     'cached': 0,\n",
+       "     'uncached': 60,\n",
+       "     'ssl': {'encrypted': 8, 'unencrypted': 52},\n",
+       "     'http_status': {'200': 60},\n",
+       "     'content_type': {'html': 60},\n",
+       "     'country': {'ID': 44, 'UA': 5, 'US': 11},\n",
+       "     'ip_class': {'noRecord': 60},\n",
+       "     'ssl_protocol': {'TLSv1.2': 1, 'TLSv1.3': 7, 'none': 52}},\n",
+       "    'bandwidth': {'all': 357820,\n",
+       "     'cached': 0,\n",
+       "     'uncached': 357820,\n",
+       "     'ssl': {'encrypted': 28372, 'unencrypted': 329448},\n",
+       "     'ssl_protocol': {'TLSv1.2': 1, 'TLSv1.3': 7, 'none': 52},\n",
+       "     'content_type': {'html': 357820},\n",
+       "     'country': {'ID': 286618, 'UA': 32526, 'US': 38676}},\n",
+       "    'threats': {'all': 0, 'type': {}, 'country': {}},\n",
+       "    'pageviews': {'all': 60, 'search_engine': {}},\n",
+       "    'uniques': {'all': 6}}],\n",
+       "  'totals': {'since': '2019-05-22T00:00:00Z',\n",
+       "   'until': '2019-05-29T00:00:00Z',\n",
+       "   'requests': {'all': 119,\n",
+       "    'cached': 10,\n",
+       "    'uncached': 109,\n",
+       "    'ssl': {'encrypted': 32, 'unencrypted': 87},\n",
+       "    'http_status': {'200': 110, '403': 1, '499': 4, '522': 4},\n",
+       "    'content_type': {'css': 3, 'empty': 4, 'html': 106, 'other': 3, 'png': 3},\n",
+       "    'country': {'AU': 13,\n",
+       "     'BE': 1,\n",
+       "     'FR': 1,\n",
+       "     'ID': 44,\n",
+       "     'IN': 1,\n",
+       "     'RU': 2,\n",
+       "     'UA': 6,\n",
+       "     'US': 51},\n",
+       "    'ip_class': {'noRecord': 112, 'searchEngine': 1, 'whitelist': 6},\n",
+       "    'ssl_protocol': {'TLSv1.2': 2, 'TLSv1.3': 30, 'none': 87}},\n",
+       "   'bandwidth': {'all': 634950,\n",
+       "    'cached': 71648,\n",
+       "    'uncached': 563302,\n",
+       "    'ssl': {'encrypted': 156687, 'unencrypted': 478263},\n",
+       "    'ssl_protocol': {'TLSv1.2': 2, 'TLSv1.3': 30, 'none': 87},\n",
+       "    'content_type': {'css': 8725,\n",
+       "     'html': 532371,\n",
+       "     'other': 45580,\n",
+       "     'png': 48274},\n",
+       "    'country': {'AU': 89389,\n",
+       "     'BE': 3480,\n",
+       "     'FR': 3482,\n",
+       "     'ID': 286618,\n",
+       "     'IN': 6648,\n",
+       "     'RU': 13291,\n",
+       "     'UA': 36105,\n",
+       "     'US': 195937}},\n",
+       "   'threats': {'all': 1, 'type': {'bic.ban.unknown': 1}, 'country': {'UA': 1}},\n",
+       "   'pageviews': {'all': 101, 'search_engine': {}},\n",
+       "   'uniques': {'all': 29}}}}"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
    ]
   }
  ],
